Fix mega menu heading spacing

--- a/src/components/header/templates/styles.scss
+++ b/src/components/header/templates/styles.scss
@@ -47,7 +47,7 @@
     }
     .heading {
         border-bottom: none;
-        line-height: 30px;
+        line-height: 18px;
         letter-spacing: .05em;
         font-size: 12px;
         font-weight: normal;
@@ -65,7 +65,7 @@
     }
     .block-heading {
         display: block;
-        margin-top: 5px;
+        margin-top: 10px;
     }
 //     .block-cta {
 //         display: block;
@@ -87,7 +87,7 @@
     }
     .heading {
         border-bottom: none;
-        line-height: 30px;
+        line-height: 18px;
         letter-spacing: .05em;
         font-size: 12px;
         font-weight: normal;
@@ -105,7 +105,7 @@
     }
     .block-heading {
         display: block;
-        // margin-top: 15px;
+        margin-top: 5px;
     }
     // .block-cta {
     //     display: block;
@@ -124,7 +124,7 @@
     }
     .heading {
         border-bottom: none;
-        line-height: 30px;
+        line-height: 18px;
         letter-spacing: .05em;
         font-size: 12px;
         font-weight: normal;
@@ -141,7 +141,7 @@
     }
     .block-heading {
         display: block;
-        margin-top: 5px;
+        margin-top: 10px;
     }
     // .block-cta {
     //     display: block;
